test/good/generics/func03.px

func call<A,B>(A x, A->B f) B def
    return f(x)

print call(-1.2, 3*_.toString()), call(["ABC"], _[0][1])
